Fix scrollbar, adjust media queries

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ main {
     padding: 25px;
     top: 0;
     z-index: 100;
-    overflow-y: auto;
+    
 }
 
 .header {
@@ -148,7 +148,8 @@ main {
     overflow: auto;
     border-radius: 5px;
     scroll-behavior: smooth;
-    max-height: 500px;
+    max-height: 300px;
+    
 }
 
 .todo {
@@ -240,22 +241,7 @@ main {
     white-space: pre;
 }
 
-footer {
-    position: fixed ;
-    bottom: 0 ;
-    width: 100%;
-    height: 55px;
-    color: var(--new-todo-text);
-    background-color: var(--main-background);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-footer p {
-    text-align: center;
-    width: 100%;
-}
 
 .popup-message {
     position: absolute;
@@ -267,7 +253,7 @@ footer p {
     padding: 10px;
     height: 55px;
     border-radius: 5px;
-    top: 10vh;
+    top: 5vh;
     text-align: center;
     z-index: 99999999999;
     display: flex;
@@ -287,13 +273,14 @@ footer p {
     .todo,
     .controls
      {
-        width: 60%;
+        
         margin-left: auto;
         margin-right: auto;
     }
 
     main {
-        top: 15vh;
+        top: 7vh;
+        width: 60%;
         
     }
 
@@ -304,7 +291,27 @@ footer p {
         bottom: 0;
         left: 50%;
     }  
+    
+    body {
+        display: flex;
+        justify-content: center;
+    }
+
+    .hero, 
+    .hero-gradient {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+    }
+
+    .todos-container {
+        max-height: 400px;
+    }
+
 }
+
+
 
 @media screen and (min-width: 1301px) { 
     .header,
@@ -312,13 +319,26 @@ footer p {
     .todos,
     .todo,
     .controls {
-        width: 40%;
         margin-left: auto;
         margin-right: auto;
     }
     
     main {
-        top: 15vh
+        top: 8vh;
+        width: 50vw;
+    }
+
+    body {
+        display: flex;
+        justify-content: center;
+    }
+
+    .hero, 
+    .hero-gradient {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
     }
 
     .filters {
@@ -329,8 +349,9 @@ footer p {
         left: 50%;
     }
 
-    
-    
-    
+    .todos-container {
+        max-height: 500px;
+    }
 
+    
 }
